Add .container styles

--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,9 @@
     font-family: "Gloria Hallelujah", cursive;
     box-sizing: border-box;
 }
+
+.container {
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(135deg, #e1eec3, #f05053)
+}
