--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,12 @@
     background: linear-gradient(135deg, #e1eec3, #f05053);
     padding: 10px;
 }
+
+.todo-app{
+    width: 100%;
+    max-width: 540px;
+    background: #fff;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+}
